--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a>
+      
+    </ul>
   </body>
 </html>
