Added a fried shrimp recipe page
Added a title with an image of the recipe
Added a description
Added an unordered list of ingredients
Added an ordered list of steps
Added missing "li" elements in index page
Added a link to the Fried Shrimp page, in the index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a>
+            <li><a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a></li>
+            <li><a href="recipes/Fried Shrimp.html">Fried Shrimp</a></li>
         </ul>
     </body>
 </html>
