--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a></li>
             <li><a href="recipes/Fried Shrimp.html">Fried Shrimp</a></li>
+            <li><a href="recipes/Pancakes.html">Pancakes</a></li>
         </ul>
     </body>
 </html>
