--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Three Delicious Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a></li>
-            <li><a href="recipes/Fried Shrimp.html">Fried Shrimp</a></li>
-            <li><a href="recipes/Pancakes.html">Pancakes</a></li>
-        </ul>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Three Delicious Recipes</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<h1 class="main-header index">Odin Recipes</h1>
+		<ul>
+			<li><a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a></li>
+			<li><a href="recipes/Fried Shrimp.html">Fried Shrimp</a></li>
+			<li><a href="recipes/Pancakes.html">Pancakes</a></li>
+		</ul>
+	</body>
 </html>
