Improve the look of the Recipe page's index.html home page Apply what you learned about the box model to practice making a more creative homepage.

--- a/recipes/Fried-Shrimp.html
+++ b/recipes/Fried-Shrimp.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../style.css" />
-<h1 class="main-header shrimp">Fried Shrimp</h1>
+<h1 class="main-header shrimp-h1">Fried Shrimp</h1>
 <img
 	src="https://www.allrecipes.com/thmb/6bjgkT8mSHHU5XwcS7g3r4jtR-8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7556606_Perfect-Fried-Shrimp_Dotdash-Meredith-Video-Studios_4x3-37c5e7cb6a0e40a1b71862f4b037dcec.jpg"
 	alt="Plate of fried shrimp"
