--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	</head>
 	<body>
 		<h1 class="main-header index">Odin Recipes</h1>
-		<ul>
-			<li><a href="recipes/Chocolate Chip Cookies.html">Chocolate Chip Cookies</a></li>
-			<li><a href="recipes/Fried Shrimp.html">Fried Shrimp</a></li>
-			<li><a href="recipes/Pancakes.html">Pancakes</a></li>
-		</ul>
+		<div class="pages">
+			<span class="cookies"><a href="recipes/Chocolate-Chip-Cookies.html">Chocolate Chip Cookies</a></span>
+			<span class="fried-shrimp"><a href="recipes/Fried-Shrimp.html">Fried Shrimp</a></span>
+			<span class="pancakes"><a href="recipes/Pancakes.html">Pancakes</a></span>
+		</div>
 	</body>
 </html>
