--- a/recipes/Chocolate-Chip-Cookies.html
+++ b/recipes/Chocolate-Chip-Cookies.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../style.css" />
-<h1 class="main-header cookies">Chocolate Chip Cookies</h1>
+<h1 class="main-header cookies-h1">Chocolate Chip Cookies</h1>
 <img
 	src="https://www.allrecipes.com/thmb/F0yxwe3HyC8XnwWYqZyCr7-tdyo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/10813-best-chocolate-chip-cookies-mfs-146-4x3-b108aceffa6043a1ac81c3c5a9b034c8.jpg"
 	alt="Plate of chocolate chip cookies"
