--- a/recipes/Pancakes.html
+++ b/recipes/Pancakes.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../style.css" />
-<h1 class="main-header pancakes">Pancakes</h1>
+<h1 class="main-header pancakes-h1">Pancakes</h1>
 <img
 	src="https://www.allrecipes.com/thmb/kvvETNZfOtAptH69gUsK6FaKRKA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21014-Good-old-Fashioned-Pancakes-mfs_001-1fa26bcdedc345f182537d95b6cf92d8.jpg"
 	alt="A delicious plate of pancakes"
